--- a/1.html
+++ b/1.html
@@ -3,6 +3,13 @@
  <head>
   <title>Команда "Победители во всём!"</title>
   <base href= "https://www.vodokanal.mk.ua/">
+  <meta charset="UTF-8">
+  <style type="text/css">
+  h1{color:red;
+  border-width:3;
+  border-style:solid;
+  text-align:center}
+  </style>
   </head>
     <body>
 <h1>Информация о команде "Информация о команде победители во всём!"</h1>
@@ -15,7 +22,9 @@
 
 <h2>Елизавета Казакова</h2>
 <p>Окончила Санкт-Петербургский политихнический...</p>
-
+<pre>,fhfrelf
+sdfdsf
+sdfsdf</pre>
 <h2>Алексей Сидоров</h2>
 <p>Отвечает за программирование роботов.</p>
 <p><a href="/resources/medias/164.jpeg"> Cсылка на изображение Вожоканала</a></p>
