--- a/1.html
+++ b/1.html
@@ -13,7 +13,7 @@
   </head>
     <body>
 <h1>Информация о команде "Информация о команде победители во всём!"</h1>
-<h2>Иван смирнов - Капитан команды</h2>
+<h2>Иван смирнов<br>Капитан команды</h2>
 
 <p>Выпускник по спецыальности "Иноватика" Обладает 5-летним опытом руководства техническими проектами.</p>
 
