--- a/1.html
+++ b/1.html
@@ -5,13 +5,13 @@
   <base href= "https://www.vodokanal.mk.ua/">
   <meta charset="UTF-8">
   <style type="text/css">
-  h1{color:red;
+  h1{color:#fe4918;
   border-width:3;
   border-style:solid;
-  text-align:center}
+  text-align:center; border-color:white}
   </style>
   </head>
-    <body>
+    <body leftmargin=100 rigtmargin=100 text=#78bed0 bgcolor=#112232 scroll=no link=#fe4918 vlink=#ffffff alink=#ffffff>
 <h1>Информация о команде "Информация о команде победители во всём!"</h1>
 <h2>Иван смирнов<br>Капитан команды</h2>
 
