--- a/1.html
+++ b/1.html
@@ -9,13 +9,15 @@
   border-width:3;
   border-style:solid;
   text-align:center; border-color:white}
+  #citie{text-align:right; color:#45525b; font-style:italic}
+  p.ssyl{text-align:center}
   </style>
   </head>
-    <body leftmargin=100 rigtmargin=100 text=#78bed0 bgcolor=#112232 scroll=no link=#fe4918 vlink=#ffffff alink=#ffffff>
+    <body leftmargin=100 rightmargin=100 text=#78bed0 bgcolor=#112232 scroll=no link=#fe4918 vlink=#ffffff alink=#ffffff>
 <h1>Информация о команде "Информация о команде победители во всём!"</h1>
 <h2>Иван смирнов<br>Капитан команды</h2>
 
-<p>Выпускник по спецыальности "Иноватика" Обладает 5-летним опытом руководства техническими проектами.</p>
+<p>Выпускник по спецыальности "Иноватика" Обладаеты 5-летним опытом руководства техническими проектами.</p>
 
 <h2>Пётр Демидов</h2>
 <p>Окончид МГГУ им Баумана...</p>
@@ -27,6 +29,7 @@ sdfdsf
 sdfsdf</pre>
 <h2>Алексей Сидоров</h2>
 <p>Отвечает за программирование роботов.</p>
-<p><a href="/resources/medias/164.jpeg"> Cсылка на изображение Вожоканала</a></p>
+<p class="ssyl"><a href="/resources/medias/164.jpeg"> Cсылка на изображение Вожоканала</a></p>
+<divid="cite">"Сайт был разработан Виталием Щербаковым"</div>
      </body>
 </html>
